--- a/Login.html
+++ b/Login.html
@@ -6,8 +6,5 @@
     </head>
 
     <body>
-        <p>Bonjour et bienvenue sur mon site !
-            Ceci est mon premier test alors soyez indulgents s'il vous plaît, j'apprends petit à petit comment cela marche.
-            Pour l'instant c'est un peu vide, mais revenez dans 2-3 jours quand j'aurai appris un peu plus de choses, je vous assure que vous allez être surpris !</p>
-    </body>
+        <p>Bonjour et bienvenue sur mon site !</p>
 </html>
